--- a/tex/theory/ideal_gases.tex
+++ b/tex/theory/ideal_gases.tex
@@ -224,8 +224,8 @@ For this reason, the variables $\rho$, $\rho \V$, and $E$ are referred to as
 ``conserved variables'', as they obey conservation laws.
 
 However, this is not the only set of variables that allows us to describe the
-fluid dynamics. In particular, the solution of the  Riemann problem (section
-\ref{chap:riemann}) will give us a set of so called ``primitive
+fluid dynamics. In particular, the solution of the  Riemann problem
+(Section~\ref{chap:riemann}) will give us a set of so called ``primitive
 variables'' (or ``physical variables'') with the ``primitive'' state vector
 $\mathbf{W}$:
 
