--- a/tex/theory/references.bib
+++ b/tex/theory/references.bib
@@ -38,9 +38,10 @@ dynamics: a practical introduction; 2nd ed.}},
 Cosmological Simulations Using Task-Based Parallelism And Dynamic Sub-Cycling
 with SWIFT}",
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
-       school = {-},
+       school = {\'Ecole Polytechnique F\'ed\'erale de Lausanne},
          year = 2023,
         month = mar,
+        doi = {10.5075/epfl-thesis-9973},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2023PhDT.........3I},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
