--- a/tex/theory/dimensional_splitting.tex
+++ b/tex/theory/dimensional_splitting.tex
@@ -111,7 +111,7 @@ For a second order accurate method, we need to do one more step in 2D:
 	\item Get $\U^{n + 1}$ by doing an x - sweep over the time interval $\Delta t / 2$ and using the intermediate solution $\U^{n + 3/4}$
 \end{enumerate}
 
-
+This is what we actually do in the code.
 
 However, if $\Delta t$ is kept constant over multiple time steps, which is
 often the case for linear advection, we can get the first order method
