remove reference to tsrs/trrs

--- a/tex/theory/riemann.tex
+++ b/tex/theory/riemann.tex
@@ -809,12 +809,12 @@ Then we assume that the primitive variable estimate is ok as long as:
 \end{itemize}
 %
 %
-If that is not the case, then we switch to the star state solutions of other
-approximate Riemann solvers: If $p_{PV} \leq p_{min}$, then we will certainly
-expect two rarefactions to form, so we use the star state estimates of the Two
-Rarefaction Riemann Solver (TRRS, eq. \ref{eq:pstar-trrs}).
-Otherwise, we have at least one shock, so use the star state estimates of the
-Two Shock Riemann Solver (TSRS, eq. \ref{eq:pstar-tsrs}).
+% If that is not the case, then we switch to the star state solutions of other
+% approximate Riemann solvers: If $p_{PV} \leq p_{min}$, then we will certainly
+% expect two rarefactions to form, so we use the star state estimates of the Two
+% Rarefaction Riemann Solver (TRRS, eq. \ref{eq:pstar-trrs}).
+% Otherwise, we have at least one shock, so use the star state estimates of the
+% Two Shock Riemann Solver (TSRS, eq. \ref{eq:pstar-tsrs}).
 
 
 % The adaptive wave speed estimate is used by default in the code, but can be
