updated documentation to reflect structure changes

--- a/doc/tex/documentation/format_specification.tex
+++ b/doc/tex/documentation/format_specification.tex
@@ -9,7 +9,7 @@
 
 \note{
     An example parameter file containing all recognized parameters is stored as
-    \texttt{hydro\_playground/examples/example\_paramfile.txt}.
+\\ \texttt{hydro\_playground/examples/example\_paramfile.txt}.
 }
 
 
