--- a/doc/tex/documentation/getting_started.tex
+++ b/doc/tex/documentation/getting_started.tex
@@ -54,9 +54,9 @@ using \jargon{ssh}.
 
 
 
-%======================================================
+%=====================================================================
 \subsection{Getting and Installing the Python Module}\label{chap:py}
-%======================================================
+%=====================================================================
 
 
 The entire \mhutils python module is stored within this repository as a git
@@ -128,12 +128,12 @@ shell's runtime configuration file, which is usually \verb|$HOME/.bashrc| for
 
 
 This documentation is stored within the repository in the
-\verb|hydro_playground/tex/documentation| directory. You can build it using the
-provided \verb|Makefile|, like so:
+\verb|hydro_playground/doc/tex/documentation| directory. You can build it using
+the provided \verb|Makefile|, like so:
 
 
 \begin{lstlisting}
-cd hydro_playground/tex/documentation
+cd hydro_playground/doc/tex/documentation
 make
 \end{lstlisting}
 
@@ -142,7 +142,7 @@ That should leave you with the resulting \verb|documentation.pdf| file.
 Alternately, you can run the latex compile command by hand:
 
 \begin{lstlisting}
-cd hydro_playground/tex/documentation
+cd hydro_playground/doc/tex/documentation
 pdflatex -jobname=documentation documentation.tex
 \end{lstlisting}
 
