--- a/doc/tex/documentation/introduction.tex
+++ b/doc/tex/documentation/introduction.tex
@@ -22,6 +22,8 @@ A simple python module, \mhutils\footnote{
 functions to plot outputs and generate initial conditions. It depends on
 \codename{matplotlib} and \codename{numpy}.
 
-
+This documentation only handles the base, unparallelised solver. For the
+individual parallelisation strategies, notes, and results, consult the
+documentation in \verb|hyrdo-playground/doc/rtd|.
 
 
